@@ -2,3 +2,7 @@ from zope.i18nmessageid import MessageFactory
 
 
 _ = MessageFactory('ftw.tooltip')
+
+
+def initialize(context):
+    """Initializer called when used as a Zope 2 product."""
