@@ -7,6 +7,8 @@
 
     <i18n:registerTranslations directory="locales" />
 
+    <five:registerPackage package="." initialize=".initialize" />
+
     <include package=".browser" />
     <include package=".upgrades" />
 
@@ -18,5 +20,13 @@
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
 
+    <genericsetup:registerProfile
+        name="uninstall"
+        title="ftw.tooltip"
+        directory="profiles/uninstall"
+        description='Uninstall ftw.tooltip'
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
+        />
 
 </configure>
