@@ -1,0 +1,8 @@
+from ftw.testing.genericsetup import GenericSetupUninstallMixin
+from ftw.testing.genericsetup import apply_generic_setup_layer
+from unittest import TestCase
+
+
+@apply_generic_setup_layer
+class TestGenericSetupUninstall(TestCase, GenericSetupUninstallMixin):
+    package = 'ftw.tooltip'
